test/bad/generics/call03.px

func f<T>(x: T, y: T): Void def
    return

func g<A,B>(x: A, y: B): Void def
    f(x, y)

g('x', false)
